# quicklsp

./: .gitignore  Cargo.toml  DESIGN.md  LSP_TEST_REPORT.md  PLAN.md  PROMPT.md  README.md  test_lsp_manual.sh
.github/workflows/: release.yml  vscode-extension.yml
docs/: cache-v3-design.md  goto-def-locals-test.md  import-aware-ranking-design.md  memory-optimization-plan.md  tree-sitter-plan.md  word-index-plan.md
editors/vscode/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: runTest.ts
editors/vscode/src/test/suite/: extension.test.ts  index.ts
examples/: repo_benchmark.rs  test_deps.rs
scripts/: bench_repos.sh  release.py
scripts/field_demo/: README.md  bench_lsp.py  drive_lsp.py  drive_lsp_second_clone.py  nvim_bench.lua  nvim_demo.lua  nvim_probe.lua  nvim_probe2.lua  run_nvim_bench.sh
scripts/field_demo/nvim_config/: init.lua
src/: lib.rs  main.rs  syntax_cache.rs  workspace.rs
src/cache/: content_store.rs  hash.rs  identity.rs  layout.rs  manifest.rs  metrics.rs  mod.rs  registry.rs  state.rs  types.rs
src/fuzzy/: deletion_neighborhood.rs  mod.rs
src/lsp/: mod.rs  server.rs
src/parsing/: mod.rs  symbols.rs  tokenizer.rs  tree_sitter_parse.rs
src/parsing/tree_sitter_parse/: c.rs  common.rs  cpp.rs  go.rs  java.rs  javascript.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/word_index/: format.rs  log.rs  mod.rs  persistence.rs
tests/: bug_reproductions.rs  c_integration.rs  cache_v3_objectives.rs  editor_integration_report.md  lsp_evaluation.rs  lsp_integration.rs  manual_lsp_rust_test_report.md  nvim_testing_guide.md  rust_integration.rs
tests/common/: mod.rs
tests/fixtures/: rust_consumer.rs  sample_c.c  sample_go.go  sample_kernel.c  sample_python.py  sample_rust.rs  sample_typescript.ts
tests/fixtures/c_project/: main.c  server.h  types.h
