[package]
name = "quicklsp"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "High-performance, heuristic-driven universal Language Server"
repository = "https://github.com/sinelaw/fresh"
authors = ["Noam Lewis"]

[[bin]]
name = "quicklsp"
path = "src/main.rs"

[lib]
name = "quicklsp"
path = "src/lib.rs"

[[example]]
name = "repo_benchmark"
path = "examples/repo_benchmark.rs"

[dependencies]
# LSP protocol
tower-lsp = "0.20"

# Concurrent data structures
dashmap = "6"

# High-performance hashing (non-cryptographic, optimized for short strings)
ahash = "0.8"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-std", "time"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
