[package]
name = "quicklsp"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "High-performance, heuristic-driven universal Language Server"
repository = "https://github.com/sinelaw/fresh"
authors = ["Noam Lewis"]

[[bin]]
name = "quicklsp"
path = "src/main.rs"

[[bin]]
name = "quicklsp-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "tokenizer-stats"
path = "src/bin/tokenizer_stats.rs"

[lib]
name = "quicklsp"
path = "src/lib.rs"

[[example]]
name = "repo_benchmark"
path = "examples/repo_benchmark.rs"

[dependencies]
# LSP protocol
tower-lsp = "0.20"

# Concurrent data structures
dashmap = "6"

# Parallel indexing
rayon = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "io-std", "time"] }

# Error handling
anyhow = "1"

# Serialization (for index metadata)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Memory management
libc = "0.2"

# Temp files for external sort runs
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ahash = "0.8.12"

# Tree-sitter parsing for accurate definitions across all languages
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"

[dev-dependencies]
tempfile = "3"

# Debug info in release builds for flamegraph/perf profiling
[profile.release]
debug = true
